# MPPI-Collision-Avoidance

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docker/: Dockerfile  build.sh  build_image.sh  create_container.sh  env.sh  run.sh  start_container.sh
example/: dyn_models.py  params_names.py  utils.py
include/: consts.hpp  controller.hpp  diff_drive.hpp  dynamics.hpp  geometry.hpp  orca_lines.hpp
mppi-ca/: CMakeLists.txt
mppi-ca/include/: consts.hpp  orca_lines.hpp
mppi-ca/python_bind/: converters.cpp  converters.hpp
mppi-ca/src/: controller.cpp  dynamics.cpp  geometry.cpp  orca_lines.cpp
python_bind/: converters.cpp  converters.hpp  mppi_ca.cpp  mppi_ca_cpp.cpp  python_controller.cpp  python_controller.hpp  python_test.py
src/: controller.cpp  diff_drive.cpp  geometry.cpp  main.cpp  orca_lines.cpp
